--- a/8.商品列表篩選.html
+++ b/8.商品列表篩選.html
@@ -8,12 +8,27 @@
 </head>
 <body>
     <div id="app">
-        <input type="text" v-model="search" @input="searchProduct"/>
-        <!-- <input type="text" v-model="search" @change="searchProduct"/> -->
-        <div>{{search}} {{count}}</div>
+        <input type="text" v-model="search" @input="filterProduct"/>
+        <br>
+        $<input type="number" v-model="min" @input="filterProduct">-
+        $<input type="number" v-model="max" @input="filterProduct">
+        <br>
+        <div>{{count}}</div>
         <ul>
-            <li v-for="item in displayData">
-                {{ item }}
+            <li v-for="listItem in displayData">
+                <template v-if="listItem.rating">
+                    <span v-for="num in parseInt(listItem.rating.rate)">
+                        🌟
+                    </span>
+                    ({{listItem.rating.count }})
+                </template>
+                <p>${{ listItem.price}}</p>
+                <h4>{{ listItem.title}}</h4>
+                <img 
+                    loading="lazy" 
+                    :src="listItem.image"
+                    :alt="listItem.title"
+                />
             </li>
         </ul>
         <button @click="scrollTop">scrollTop</button>
@@ -25,6 +40,8 @@
             data(){
                 return {
                     search:'', 
+                    min:0, 
+                    max:0, 
                     responseData: [],
                     displayData: []
                 }
@@ -65,7 +82,7 @@
                         console.error('Error fetching data:', error);
                     });
                 },
-                searchProduct() {
+                filterProduct() {
                     if(this.search === ''){
                         this.displayData = this.responseData
                     }else{
@@ -73,7 +90,12 @@
                             // 完全比對
                             // return item.title == this.search
                             // 模糊比對
-                            return item.title.includes(this.search)
+                            // return item.title.includes(this.search)
+                            if(this.max && this.max > 0){
+                                return item.title.includes(this.search) && item.price >= this.min && item.price <= this.max
+                            }else{
+                                return item.title.includes(this.search) && item.price >= this.min
+                            }
                         })
                     }
                 }
@@ -95,6 +117,9 @@
         display: flex;
         align-items: center;
         justify-content: center;
+    }
+    img{
+        width: 4rem;
     }
     button{
         padding: 1rem 2rem;
