--- a/class0518/1.html
+++ b/class0518/1.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>test</title>
 </head>
+
 <body>
-    111
-    222
+    <div id="app">
+        <p>Are you {{name}}?</p>
+        <p v-text="`${age}歲`"></p>
+        <h6 v-html="content"></h6>
+    </div>
+    
+    <script src="https://unpkg.com/vue"></script>
+
+    <script>
+        const app = Vue.createApp({
+            data() {
+                return {
+                    name: 'minna',
+                    age: 18,
+                    hobby: ['movie', 'video'],
+                };
+            },
+            gender: null,
+        });
+        app.mount("#app");
+    </script>
 </body>
+
 </html>
